# ros_tiago-rosplan-ilm

./: Dockerfile
rosplan_ilm/: CMakeLists.txt  package.xml
rosplan_ilm/common/: domain_turtlebot.ppddl  plan.pddl  problem.pddl  problem_turtlebot.pddl  tmp.txt
rosplan_ilm/include/TCP/: rexd_client.h
rosplan_ilm/include/kb_agent/: KBAgent.h
rosplan_ilm/include/state_monitor/: RPStateMonitor.h
rosplan_ilm/launch/: interfaced_planning_system.launch  rexd_client.launch  sample pddl string.txt  tiago_ilm.launch  turtlebot_ilm.launch
rosplan_ilm/launch/includes/: dispatch_interface.launch  parsing_interface.launch  simulated_action.launch
rosplan_ilm/src/TCP/: command.txt  rexd_client.cpp  rexd_parser.py  sample_ILM_pddl_problem.pddl  sample_pddl_string.pddl
rosplan_ilm/src/kb_agent/: KBAgent.cpp
rosplan_ilm/src/state_monitor/: RPStateMonitor.cpp
rosplan_ilm/tutorial/: plan.dot  plan_tutorial_03.pddl  query_client.py  run.sh  tutorial.bash  tutorial_01_02.launch  tutorial_03.launch  tutorial_04_05.launch  tutorial_09_domain.pddl  tutorial_09_problem.pddl  tutorial_10.launch  update.bash
rosplan_ilm_msgs/: CMakeLists.txt  package.xml
rosplan_ilm_msgs/srv/: GetInstanceCount.srv  SetReservedInstance.srv
rosplan_interface_ext_action/: CMakeLists.txt  package.xml
rosplan_interface_ext_action/include/ActionInterface/: RPProbActionInterface.h  RPProbSimulatedActionInterface.h
rosplan_interface_ext_action/include/rosplan_interface_explore/: RPExplore.h
rosplan_interface_ext_action/include/rosplan_interface_localise/: RPLocalise.h
rosplan_interface_ext_action/include/rosplan_interface_move/: RPMove.h
rosplan_interface_ext_action/include/rosplan_interface_search/: RPSearch.h
rosplan_interface_ext_action/include/rosplan_interface_talk/: RPTalk.h
rosplan_interface_ext_action/src/ActionInterface/: RPProbActionInterface.cpp  RPProbSimulatedActionInterface.cpp
rosplan_interface_ext_action/src/rosplan_interface_explore/: RPExplore.cpp
rosplan_interface_ext_action/src/rosplan_interface_localise/: RPLocalise.cpp
rosplan_interface_ext_action/src/rosplan_interface_move/: RPMove.cpp
rosplan_interface_ext_action/src/rosplan_interface_search/: RPSearch.cpp
rosplan_interface_ext_action/src/rosplan_interface_talk/: RPTalk.cpp
rosplan_interface_mapping/src/: RPRoadmapServer.cpp  RPSimpleMapServer.cpp
rosplan_interface_tiago/: CMakeLists.txt  package.xml
rosplan_interface_tiago/common/: domain_tiago.ppddl  domain_tiago_probabilistic.ppddl  plan_findperson.pddl  plan_give_object.pddl  plan_pickup_object.pddl  plan_using_learned_model.pddl  problem_tiago (do not edit).pddl  problem_tiago.pddl
rosplan_interface_tiago/config/rviz/: navigation_public_sim.rviz
rosplan_interface_tiago/include/rosplan_interface_findperson/: RPFindPerson.h
rosplan_interface_tiago/include/rosplan_interface_grasp/: RPGrasp.h
rosplan_interface_tiago/include/rosplan_interface_playmotion/: RPPlayMotion.h
rosplan_interface_tiago/include/rosplan_interface_talktoperson/: RPTalkToPerson.h
rosplan_interface_tiago/launch/navigation/: tiago_navigation (copy 1).launch  tiago_navigation.launch  tiago_navigation_public (copy 1).launch  tiago_navigation_public.launch
rosplan_interface_tiago/launch/pick/: pick_demo.launch
rosplan_interface_tiago/maps/configurations/demo_office/: map.pgm
rosplan_interface_tiago/scripts/: exploration_path_demo_office.txt
