<?xml version="1.0"?>
<package>
  <name>rosplan_ilm_msgs</name>
  <version>0.0.0</version>
  <description>The rosplan_ilm_msgs package</description>
  <maintainer email="alvin.ng@ed.ac.uk">Alvin Ng</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export></export>
</package>
