<?xml version="1.0"?>
<package>
  <name>rosplan_interface_tiago</name>
  <version>0.0.0</version>
  <description>The rosplan_interface_tiago package</description>
  <maintainer email="alvin.ng@ed.ac.uk">alvin</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>rosplan_planning_system</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>rosplan_interface_ext_action</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>pal_interaction_msgs</build_depend>
  <build_depend>tiago_pick_demo</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>rosplan_ilm</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rosplan_dispatch_msgs</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>
  <run_depend>rosplan_planning_system</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>rosplan_interface_ext_action</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>pal_interaction_msgs</run_depend>
  <run_depend>tiago_pick_demo</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>rosplan_ilm</run_depend>

  <export></export>
</package>
